Added the gist for each notebook

--- a/1. Stats-Infrences.ipynb
+++ b/1. Stats-Infrences.ipynb
@@ -1,6 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#\n",
+    "---\n",
+    "# Gist of this Notebook : \n",
+    "\n",
+    "<ol>\n",
+    "<li><strong>Loaded and inspected data:</strong> Loaded train and test datasets, displayed their content, and their sizes.</li>\n",
+    "    \n",
+    "<li><strong>Combined datasets:</strong> Combined train and test datasets for consistent preprocessing.</li>\n",
+    "    \n",
+    "<li><strong>Corrected data types:</strong> Set data types of a subset of columns to object and converted 'Policy Start Date' to a datetime.</li>\n",
+    "    \n",
+    "<li><strong>Analyzed nulls:</strong> Analyzed and displayed which columns had missing data, the number of unique values in each column, their datatypes.</li>\n",
+    "    \n",
+    "<li><strong>Split dataset:</strong> split the train dataset for feature analysis.</li>\n",
+    "    \n",
+    "<li><strong>Set up statistical analysis:</strong> Created a <code><strong>give_stats_analysis</strong></code> function for automated statistical relationship analysis.</li>\n",
+    "    \n",
+    "<li><strong>Performed Statistical Analysis:</strong> Analyzed the features relationship with a single target feature, for multiple target features.</li>\n",
+    "\n",
+    "</ol>\n",
+    "\n",
+    "#####\n",
+    "---\n",
+    "#"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
