--- a/2.5. Feature Engineering.ipynb
+++ b/2.5. Feature Engineering.ipynb
@@ -1,6 +1,83 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "98442a76-64dd-4148-aee0-9714a41cf1f4",
+   "metadata": {},
+   "source": [
+    "#\n",
+    "---\n",
+    "# Gist of this Notebook : \n",
+    "<ol>\n",
+    "<li><strong>Converted <code>Policy Start Date</code>:</strong> Converted the \"Policy Start Date\" column to datetime objects.</li>\n",
+    "\n",
+    "<li><strong>Analyzed columns:</strong> Analyzed and displayed which columns had missing data, the number of unique values in each column, and their datatypes.</li>\n",
+    "\n",
+    "<li><strong>Feature Engineering :</strong> Generated the following new features:\n",
+    "    <ul>\n",
+    "        <li><strong>Health-Related Features:</strong>\n",
+    "            <ul>\n",
+    "                <li><code>Health Conscious Level</code>: Created by combining smoking, exercise, age, and health score using binning and summing.</li>\n",
+    "                <li><code>Health Conscious Level1</code>: Created by multiplying smoking, exercise, age and health score (using mapping).</li>\n",
+    "                <li><code>Health_Risk_Score</code> : Created by combining the effect of smoking , exercise and health score</li>\n",
+    "                <li><code>Health_Age_Interaction</code> : Interaction between Age and Health Score.</li>\n",
+    "            </ul>\n",
+    "        </li>\n",
+    "        <li><strong>Financial Features:</strong>\n",
+    "            <ul>\n",
+    "                <li><code>Money Per Head</code>: Annual income per dependent.</li>\n",
+    "                <li><code>Money Handling Level</code>: Annual income multiplied by credit score.</li>\n",
+    "                <li><code>Money Handling Level1</code>: Annual income divided by credit score.</li>\n",
+    "            </ul>\n",
+    "        </li>\n",
+    "          <li><strong>Growth Features:</strong>\n",
+    "            <ul>\n",
+    "               <li><code>Growth</code> : Annual Income with respect to education</li>\n",
+    "               <li><code>Growth1</code> : Annual Income divided by education</li>\n",
+    "            </ul>\n",
+    "        </li>\n",
+    "          <li><strong>Deterministic Feature:</strong>\n",
+    "                <ul>\n",
+    "                   <li><code>Determinstic</code>: Annual income with respect to age</li>\n",
+    "               </ul>\n",
+    "        </li>\n",
+    "        <li><strong>Date and Time Features:</strong>\n",
+    "            <ul>\n",
+    "                <li><code>Day_Name</code> : Day of the week the insurance policy was created.</li>\n",
+    "            </ul>\n",
+    "        </li>\n",
+    "         <li><strong>Credit and Insurance Features:</strong>\n",
+    "            <ul>\n",
+    "                <li><code>Credit by Score</code>: Credit score divided by previous claims.</li>\n",
+    "                <li><code>CreditInsurance</code> : Credit score multiplied by insurance duration</li>\n",
+    "                <li> <code>Credit_Health_Score</code> : Credit Score and Health Score Interaction</li>\n",
+    "             </ul>\n",
+    "        </li>\n",
+    "        <li><strong>Customer Feedback Features:</strong>\n",
+    "            <ul>\n",
+    "                <li><code>Feedback1</code> : Annual Income based on the customer feedback (using mapping).</li>\n",
+    "                <li><code>Feedback2</code> : Credit Score based on the customer feedback (using mapping).</li>\n",
+    "                <li><code>Feedback3</code> : Previous Claims based on the customer feedback (using mapping).</li>\n",
+    "                <li><code>Feedback4</code> : Health Score based on the customer feedback (using mapping).</li>\n",
+    "            </ul>\n",
+    "        </li>\n",
+    "        <li><strong>Null Count Feature:</strong>\n",
+    "            <ul>\n",
+    "                 <li><code>Total Nulls</code>: Sum of all <code>IsNull_*</code> columns, indicating the amount of missing data in a row.</li>\n",
+    "             </ul>\n",
+    "        </li>\n",
+    "    </ul>\n",
+    "</li>\n",
+    "  <li><strong>Downloaded the dataframe :</strong> Downloaded the modified dataframe that contains all the newly created features.</li>\n",
+    "</ol>\n",
+    "\n",
+    "\n",
+    "#####\n",
+    "---\n",
+    "#"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "73b43899-84ea-4658-9d7a-ea27b211fc99",
