Done Pipeline and model is predicting in webpage

--- a/4. Model Building.ipynb
+++ b/4. Model Building.ipynb
@@ -4114,12 +4114,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "id": "e65e8d91-aa2c-408a-a718-e793d3d0cf76",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-05T12:06:11.657008Z",
-     "iopub.status.busy": "2025-01-05T12:06:11.657008Z"
+     "iopub.status.busy": "2025-01-05T12:06:11.657008Z",
+     "iopub.status.idle": "2025-01-05T12:10:45.970854Z",
+     "shell.execute_reply": "2025-01-05T12:10:45.970344Z",
+     "shell.execute_reply.started": "2025-01-05T12:06:11.657008Z"
     },
     "scrolled": true
    },
@@ -4159,7 +4162,60 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n"
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "Fold 2 RMSLE: 1.0484247640232733\n",
+      "[LightGBM] [Info] This is the GPU trainer!!\n",
+      "[LightGBM] [Info] Total Bins 4916\n",
+      "[LightGBM] [Info] Number of data points in the train set: 960000, number of used features: 65\n",
+      "[LightGBM] [Info] Using requested OpenCL platform 1 device 0\n",
+      "[LightGBM] [Info] Using GPU Device: NVIDIA GeForce RTX 3050 6GB Laptop GPU, Vendor: NVIDIA Corporation\n",
+      "[LightGBM] [Info] Compiling OpenCL Kernel with 256 bins...\n",
+      "[LightGBM] [Info] GPU programs have been built\n",
+      "[LightGBM] [Info] Size of histogram bin entry: 8\n",
+      "[LightGBM] [Info] 54 dense feature groups (51.27 MB) transferred to GPU in 0.036530 secs. 1 sparse feature groups\n",
+      "[LightGBM] [Info] Start training from score 6.593998\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "Fold 3 RMSLE: 1.0444590072586626\n",
+      "[LightGBM] [Info] This is the GPU trainer!!\n",
+      "[LightGBM] [Info] Total Bins 4916\n",
+      "[LightGBM] [Info] Number of data points in the train set: 960000, number of used features: 65\n",
+      "[LightGBM] [Info] Using requested OpenCL platform 1 device 0\n",
+      "[LightGBM] [Info] Using GPU Device: NVIDIA GeForce RTX 3050 6GB Laptop GPU, Vendor: NVIDIA Corporation\n",
+      "[LightGBM] [Info] Compiling OpenCL Kernel with 256 bins...\n",
+      "[LightGBM] [Info] GPU programs have been built\n",
+      "[LightGBM] [Info] Size of histogram bin entry: 8\n",
+      "[LightGBM] [Info] 54 dense feature groups (51.27 MB) transferred to GPU in 0.042669 secs. 1 sparse feature groups\n",
+      "[LightGBM] [Info] Start training from score 6.594141\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "Fold 4 RMSLE: 1.049040408944277\n",
+      "[LightGBM] [Info] This is the GPU trainer!!\n",
+      "[LightGBM] [Info] Total Bins 4917\n",
+      "[LightGBM] [Info] Number of data points in the train set: 960000, number of used features: 65\n",
+      "[LightGBM] [Info] Using requested OpenCL platform 1 device 0\n",
+      "[LightGBM] [Info] Using GPU Device: NVIDIA GeForce RTX 3050 6GB Laptop GPU, Vendor: NVIDIA Corporation\n",
+      "[LightGBM] [Info] Compiling OpenCL Kernel with 256 bins...\n",
+      "[LightGBM] [Info] GPU programs have been built\n",
+      "[LightGBM] [Info] Size of histogram bin entry: 8\n",
+      "[LightGBM] [Info] 54 dense feature groups (51.27 MB) transferred to GPU in 0.037724 secs. 1 sparse feature groups\n",
+      "[LightGBM] [Info] Start training from score 6.593059\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "Fold 5 RMSLE: 1.0422634466091438\n"
      ]
     }
    ],
@@ -4215,19 +4271,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "id": "27ff46e1-bfd0-4097-85f6-5b8719e1ec75",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-05T12:10:45.975589Z",
+     "iopub.status.busy": "2025-01-05T12:10:45.974159Z",
+     "iopub.status.idle": "2025-01-05T12:10:46.030552Z",
+     "shell.execute_reply": "2025-01-05T12:10:46.029534Z",
+     "shell.execute_reply.started": "2025-01-05T12:10:45.975589Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[VotingRegressor(estimators=[('lgbm',\n",
+       "                              LGBMRegressor(colsample_bytree=0.8071815211022829,\n",
+       "                                            device='gpu', gpu_device_id=0,\n",
+       "                                            gpu_platform_id=1,\n",
+       "                                            learning_rate=0.055186215312218706,\n",
+       "                                            max_depth=11, min_child_samples=100,\n",
+       "                                            n_estimators=470, num_leaves=131,\n",
+       "                                            reg_alpha=5.4821727206510005,\n",
+       "                                            reg_lambda=6.187384822358707,\n",
+       "                                            subsample=0.7456958918734639)),\n",
+       "                             ('xgb',\n",
+       "                              XGBRegressor(base_s...\n",
+       "                                           importance_type=None,\n",
+       "                                           interaction_constraints=None,\n",
+       "                                           learning_rate=0.018352261556416866,\n",
+       "                                           max_bin=None, max_cat_threshold=None,\n",
+       "                                           max_cat_to_onehot=None,\n",
+       "                                           max_delta_step=None, max_depth=9,\n",
+       "                                           max_leaves=None, min_child_weight=6,\n",
+       "                                           missing=nan,\n",
+       "                                           monotone_constraints=None,\n",
+       "                                           multi_strategy=None, n_estimators=711,\n",
+       "                                           n_jobs=None, num_parallel_tree=None,\n",
+       "                                           predictor='gpu_predictor', ...))]),\n",
+       " VotingRegressor(estimators=[('lgbm',\n",
+       "                              LGBMRegressor(colsample_bytree=0.8071815211022829,\n",
+       "                                            device='gpu', gpu_device_id=0,\n",
+       "                                            gpu_platform_id=1,\n",
+       "                                            learning_rate=0.055186215312218706,\n",
+       "                                            max_depth=11, min_child_samples=100,\n",
+       "                                            n_estimators=470, num_leaves=131,\n",
+       "                                            reg_alpha=5.4821727206510005,\n",
+       "                                            reg_lambda=6.187384822358707,\n",
+       "                                            subsample=0.7456958918734639)),\n",
+       "                             ('xgb',\n",
+       "                              XGBRegressor(base_s...\n",
+       "                                           importance_type=None,\n",
+       "                                           interaction_constraints=None,\n",
+       "                                           learning_rate=0.018352261556416866,\n",
+       "                                           max_bin=None, max_cat_threshold=None,\n",
+       "                                           max_cat_to_onehot=None,\n",
+       "                                           max_delta_step=None, max_depth=9,\n",
+       "                                           max_leaves=None, min_child_weight=6,\n",
+       "                                           missing=nan,\n",
+       "                                           monotone_constraints=None,\n",
+       "                                           multi_strategy=None, n_estimators=711,\n",
+       "                                           n_jobs=None, num_parallel_tree=None,\n",
+       "                                           predictor='gpu_predictor', ...))]),\n",
+       " VotingRegressor(estimators=[('lgbm',\n",
+       "                              LGBMRegressor(colsample_bytree=0.8071815211022829,\n",
+       "                                            device='gpu', gpu_device_id=0,\n",
+       "                                            gpu_platform_id=1,\n",
+       "                                            learning_rate=0.055186215312218706,\n",
+       "                                            max_depth=11, min_child_samples=100,\n",
+       "                                            n_estimators=470, num_leaves=131,\n",
+       "                                            reg_alpha=5.4821727206510005,\n",
+       "                                            reg_lambda=6.187384822358707,\n",
+       "                                            subsample=0.7456958918734639)),\n",
+       "                             ('xgb',\n",
+       "                              XGBRegressor(base_s...\n",
+       "                                           importance_type=None,\n",
+       "                                           interaction_constraints=None,\n",
+       "                                           learning_rate=0.018352261556416866,\n",
+       "                                           max_bin=None, max_cat_threshold=None,\n",
+       "                                           max_cat_to_onehot=None,\n",
+       "                                           max_delta_step=None, max_depth=9,\n",
+       "                                           max_leaves=None, min_child_weight=6,\n",
+       "                                           missing=nan,\n",
+       "                                           monotone_constraints=None,\n",
+       "                                           multi_strategy=None, n_estimators=711,\n",
+       "                                           n_jobs=None, num_parallel_tree=None,\n",
+       "                                           predictor='gpu_predictor', ...))]),\n",
+       " VotingRegressor(estimators=[('lgbm',\n",
+       "                              LGBMRegressor(colsample_bytree=0.8071815211022829,\n",
+       "                                            device='gpu', gpu_device_id=0,\n",
+       "                                            gpu_platform_id=1,\n",
+       "                                            learning_rate=0.055186215312218706,\n",
+       "                                            max_depth=11, min_child_samples=100,\n",
+       "                                            n_estimators=470, num_leaves=131,\n",
+       "                                            reg_alpha=5.4821727206510005,\n",
+       "                                            reg_lambda=6.187384822358707,\n",
+       "                                            subsample=0.7456958918734639)),\n",
+       "                             ('xgb',\n",
+       "                              XGBRegressor(base_s...\n",
+       "                                           importance_type=None,\n",
+       "                                           interaction_constraints=None,\n",
+       "                                           learning_rate=0.018352261556416866,\n",
+       "                                           max_bin=None, max_cat_threshold=None,\n",
+       "                                           max_cat_to_onehot=None,\n",
+       "                                           max_delta_step=None, max_depth=9,\n",
+       "                                           max_leaves=None, min_child_weight=6,\n",
+       "                                           missing=nan,\n",
+       "                                           monotone_constraints=None,\n",
+       "                                           multi_strategy=None, n_estimators=711,\n",
+       "                                           n_jobs=None, num_parallel_tree=None,\n",
+       "                                           predictor='gpu_predictor', ...))]),\n",
+       " VotingRegressor(estimators=[('lgbm',\n",
+       "                              LGBMRegressor(colsample_bytree=0.8071815211022829,\n",
+       "                                            device='gpu', gpu_device_id=0,\n",
+       "                                            gpu_platform_id=1,\n",
+       "                                            learning_rate=0.055186215312218706,\n",
+       "                                            max_depth=11, min_child_samples=100,\n",
+       "                                            n_estimators=470, num_leaves=131,\n",
+       "                                            reg_alpha=5.4821727206510005,\n",
+       "                                            reg_lambda=6.187384822358707,\n",
+       "                                            subsample=0.7456958918734639)),\n",
+       "                             ('xgb',\n",
+       "                              XGBRegressor(base_s...\n",
+       "                                           importance_type=None,\n",
+       "                                           interaction_constraints=None,\n",
+       "                                           learning_rate=0.018352261556416866,\n",
+       "                                           max_bin=None, max_cat_threshold=None,\n",
+       "                                           max_cat_to_onehot=None,\n",
+       "                                           max_delta_step=None, max_depth=9,\n",
+       "                                           max_leaves=None, min_child_weight=6,\n",
+       "                                           missing=nan,\n",
+       "                                           monotone_constraints=None,\n",
+       "                                           multi_strategy=None, n_estimators=711,\n",
+       "                                           n_jobs=None, num_parallel_tree=None,\n",
+       "                                           predictor='gpu_predictor', ...))])]"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "1001de8c-b68b-4ca2-aa91-ccff58ee0cac",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-05T12:10:46.032641Z",
+     "iopub.status.busy": "2025-01-05T12:10:46.031242Z",
+     "iopub.status.idle": "2025-01-05T12:10:46.040214Z",
+     "shell.execute_reply": "2025-01-05T12:10:46.037755Z",
+     "shell.execute_reply.started": "2025-01-05T12:10:46.032641Z"
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -4296,9 +4497,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "id": "fdc01e9d-085f-4b94-b005-2d309876228f",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-05T12:10:46.046906Z",
+     "iopub.status.busy": "2025-01-05T12:10:46.046906Z",
+     "iopub.status.idle": "2025-01-05T12:10:46.050821Z",
+     "shell.execute_reply": "2025-01-05T12:10:46.050821Z",
+     "shell.execute_reply.started": "2025-01-05T12:10:46.046906Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# splitter = KFold(n_splits=10)"
@@ -4306,9 +4515,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "13f92aa0-376c-4540-9004-9e3aa8e270de",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-05T12:10:46.055396Z",
+     "iopub.status.busy": "2025-01-05T12:10:46.053904Z",
+     "iopub.status.idle": "2025-01-05T12:10:46.060672Z",
+     "shell.execute_reply": "2025-01-05T12:10:46.060672Z",
+     "shell.execute_reply.started": "2025-01-05T12:10:46.053904Z"
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -4340,9 +4556,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "id": "69e93adb-855e-4687-b121-d603c0ae6d6a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-05T12:10:46.064713Z",
+     "iopub.status.busy": "2025-01-05T12:10:46.063661Z",
+     "iopub.status.idle": "2025-01-05T12:10:46.072235Z",
+     "shell.execute_reply": "2025-01-05T12:10:46.070948Z",
+     "shell.execute_reply.started": "2025-01-05T12:10:46.064713Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# with open('models.pkl', 'wb') as file:\n",
@@ -4355,7 +4579,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0e8ab34a-c23b-403e-8067-a0c8a1600677",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-05T12:10:46.072752Z",
+     "iopub.status.busy": "2025-01-05T12:10:46.072752Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import gzip\n",
